# CapstoneProject

./: .env  Makefile  readme.md
backend/: performance.js  pyproject.toml
backend/src/app/: auth.py  db.py  main.py  models.py  openlibrary_client.py
backend/src/app/core/: logging.py
backend/src/app/routers/: book_router.py  collections_router.py  openlibrary.py  reviews_router.py  user_books_router.py
backend/src/app/schemas/: requests.py  search_book.py
backend/src/app/services/: openlibrary_client.py
backend/src/app/services/books/: book_filter.py  book_ratings.py
backend/src/app/services/database/: book_service.py  collections.py  profile.py  reviews.py
backend/src/app/services/filter/: book_filter.py
backend/src/app/services/openlibrary/: openlibrary.py  openlibrary_client.py
frontend/: index.html  search.js  style.css
frontend/js/: browse.js  collections.js  myCollections.js  myReads.js  profile.js  search.js  session.js  settings.js
frontend/loginPages/: createAccount.html  login.html
frontend/subpages/: about.html  browse.html  collections.html  contact.html  contactUs.html  search.html  trending.html
frontend/userPages/: myCollections.html  myReads.html  profile.html  settings.html
